--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 <!-- End of Device Heterogeneous FL Section -->
 
 <!-- Overview Section -->
-<section class="overview-section" style="padding: 10px 0; background-color: #ffebee;">
+<section class="overview-section" style="padding: 10px 0; background-color: #f3e5f5;">
   <div class="container has-text-centered">
     <!-- Title -->
     <h1 class="title overview-title" style="color: #333;">TAKFL Overview</h1>
@@ -252,32 +252,16 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
+        <img src="static/images/results1.png" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
+        <img src="static/images/results2.png" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
+        <img src="static/images/results3.png" alt="MY ALT TEXT"/>
      </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-    </div>
   </div>
 </div>
 </div>
