--- a/index.html
+++ b/index.html
@@ -246,21 +246,22 @@
 <!-- End of Overview Section -->
 
 <!-- Image carousel -->
-<section class="hero is-small">
+<section class="hero is-small" style="padding: 10px 0;">
+  <h1 class="title overview-title">Performance Results</h1>
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/results1.png" alt="MY ALT TEXT"/>
+        <img src="static/images/results1.png" alt="MY ALT TEXT" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/results2.png" alt="MY ALT TEXT"/>
+        <img src="static/images/results2.png" alt="MY ALT TEXT" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/results3.png" alt="MY ALT TEXT"/>
+        <img src="static/images/results3.png" alt="MY ALT TEXT" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
      </div>
   </div>
 </div>
