--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
 
 <!-- Image carousel -->
 <section class="hero is-small" style="padding: 10px 0;">
-  <h1 class="title overview-title">Performance Results</h1>
   <div class="hero-body">
-    <div class="container">
+    <div class="container has-text-centered">
+    <h1 class="title overview-title" style="color: #333;">Performance Results</h1>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
