--- a/index.html
+++ b/index.html
@@ -252,15 +252,12 @@
     <h1 class="title overview-title" style="color: #333;">Performance Results</h1>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
-        <!-- Your image here -->
         <img src="static/images/results1.png" alt="MY ALT TEXT" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
       </div>
       <div class="item">
-        <!-- Your image here -->
         <img src="static/images/results2.png" alt="MY ALT TEXT" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
       </div>
       <div class="item">
-        <!-- Your image here -->
         <img src="static/images/results3.png" alt="MY ALT TEXT" style="max-width: 100%; height: auto; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 10px;">
      </div>
   </div>
@@ -304,7 +301,23 @@
     </div>
   </section>
 <!--End paper poster -->
--->
+
+<!-- Theoretical Results -->
+<section class="section hero">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Theoretical Results</h2>
+        <div class="content has-text-justified">
+          <p>
+            Our paper.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Theoretical Results -->
 
 <!-- Acknowledgement -->
 <section class="section hero is-light">
