--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 <!-- End of Device Heterogeneous FL Section -->
 
 <!-- Overview Section -->
-<section class="overview-section" style="padding: 10px 0; background-color: #f3e5f5;">
+<section class="overview-section" style="padding: 10px 0; background-color: #e0f2f1;">
   <div class="container has-text-centered">
     <!-- Title -->
     <h1 class="title overview-title" style="color: #333;">TAKFL Overview</h1>
