--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 </section>
 <!-- End of Device Heterogeneous FL Section -->
 
-<!-- Overview Section -->
-<section class="overview-section" style="padding: 10px 0; background-color: #e0f2f1;">
+<!-- TAKFL Overview Section -->
+<section class="overview-section" style="padding: 10px 0; background-color: #f0f4f8;">
   <div class="container has-text-centered">
     <!-- Title -->
     <h1 class="title overview-title" style="color: #333;">TAKFL Overview</h1>
@@ -243,7 +243,7 @@
     </p>
   </div>
 </section>
-<!-- End of Overview Section -->
+<!-- End of TAKFL Overview Section -->
 
 <!-- Image carousel -->
 <section class="hero is-small" style="padding: 10px 0;">
