--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         <h2 class="title is-3">Theoretical Results</h2>
         <div class="content has-text-justified">
           <p>
-            Our paper.
+            We present the first theoretical framework using the concept of capacity dimension to understand the effectiveness of KD in device heterogeneous FL.
           </p>
         </div>
       </div>
