--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 <!--End paper poster -->
 
 <!-- Theoretical Results -->
-<section class="section hero">
+<section class="section hero" style="background-color: #f9f9f9;">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
