--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
   </section>
 <!--End paper poster -->
 
-<!-- Theoretical Results -->
-<section class="section hero" style="background-color: #f9f9f9;">
+<!-- Theoretical Results style="background-color: #f9f9f9;" -->
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
