--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 <!-- End Theoretical Results -->
 
 <!-- Acknowledgement -->
-<section class="section hero is-light">
+<section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -340,7 +340,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{morafah2024diversedeviceheterogeneousfederated,
+      title={Towards Diverse Device Heterogeneous Federated Learning via Task Arithmetic Knowledge Integration}, 
+      author={Mahdi Morafah and Vyacheslav Kungurtsev and Hojin Chang and Chen Chen and Bill Lin},
+      year={2024},
+      eprint={2409.18461},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2409.18461}, 
+}</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
