--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <!-- End of TAKFL Overview Section -->
 
 <!-- Image carousel -->
-<section class="hero is-small" style="padding: 10px 0;">
+<section class="hero is-small is-light" style="padding: 10px 0;">
   <div class="hero-body">
     <div class="container has-text-centered">
     <h1 class="title overview-title" style="color: #333;">Performance Results</h1>
@@ -303,7 +303,7 @@
 <!--End paper poster -->
 
 <!-- Theoretical Results style="background-color: #f9f9f9;" -->
-<section class="section hero is-light">
+<section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -320,7 +320,7 @@
 <!-- End Theoretical Results -->
 
 <!-- Acknowledgement -->
-<section class="section hero">
+<section class="section hero hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -337,7 +337,7 @@
 <!-- End Acknowledgement -->
 
 <!--BibTex citation -->
-  <section class="section" id="BibTeX">
+  <section class="section hero" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@misc{morafah2024diversedeviceheterogeneousfederated,
