--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <h2 class="title is-3">Acknowledgement</h2>
         <div class="content has-text-justified">
           <p>
-            This research was partially supported by a grant from Cisco Systems, Inc. We also gratefully acknowledge the use of the computational infrastructure provided by the OP VVV funded project CZ.02.1.01/0.0/0.0/16\_019/0000765, “Research Center for Informatics,” which enabled us to conduct the experiments presented in this work.
+            This research was partially supported by a grant from Cisco Systems, Inc. We also gratefully acknowledge the use of the computational infrastructure provided by the OP VVV funded project CZ.02.1.01/0.0/0.0/16 019/0000765, “Research Center for Informatics,” which enabled us to conduct the experiments presented in this work.
           </p>
         </div>
       </div>
