--- a/index.html
+++ b/index.html
@@ -311,6 +311,10 @@
         <div class="content has-text-justified">
           <p>
             We present the first theoretical framework using the concept of capacity dimension to understand the effectiveness of KD in device heterogeneous FL.
+            Our theoretical results demonstrate that vanilla KD leads to inefficient and inaccurate use of model capacity, and thereby information loss and suboptimal knowledge transfer (Remark 1 in the paper).
+            Moreover, our theoretical results show that under the case that device prototypes have different capacities, 
+            TAKFL smartly transfers the most informative knowledge to each prototype’s student model based on its own intrinsic capacity
+            leading to effective knowlege transfer.
           </p>
         </div>
       </div>
