--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href=https://mmorafah.github.io/homepage/ target="_blank">Mahdi Morafah</a><sup>1*</sup>,</span>
+                <a href="https://scholar.google.com/citations?hl=en&user=xrrVYuwAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Mahdi Morafah</a><sup>1*</sup>,</span>
                 <span class="author-block">
                   Vyacheslav Kungurtsev<sup>2</sup>,</span>
                   <span class="author-block">
